Inserindo objetos, sem transformacao e controle

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <button type="button" id="retan">Retangulo</button>
         <button type="button" id="trian">Triangulo</button>
         <button type="button" id="circu">Circulo</button>
+        <table id="tabela_obj"></table>
         <script src="./dist/main.js" charset="utf-8"></script>
     </body>
 </html>
