--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
         <title>Computação Grafica</title>
     </head>
     <body>
-        <canvas id="canvas" style="border:1px solid #d3d3d3" width="200" height="100"></canvas>
-        <button type="button" id="linha">Linha</button>
-        <button type="button" id="retan">Retangulo</button>
-        <button type="button" id="trian">Triangulo</button>
-        <button type="button" id="circu">Circulo</button>
+        <div style="width:100%; overflow:hidden;">
+            <div style="width:50px;float:left;">
+                <button class="btn-des" type="button" id="linha">&verbar;</button>
+                <button class="btn-des" type="button" id="retan">&#8414;</button>
+                <button class="btn-des" type="button" id="trian">&lrtri;</button>
+                <button class="btn-des" type="button" id="circu">&#8413;</button>
+            </div>
+            <canvas id="canvas" style="margin-left: 60px; border:1px solid #d3d3d3" width="500" height="500"></canvas>
+        </div>
         <table id="tabela_obj"></table>
         <script src="./dist/main.js" charset="utf-8"></script>
+        <style>
+            .btn-des {
+                font-size : 20pt;
+                width : 50px;
+                height : 50px;
+                margin-left : 20px;
+            }
+        </style>
     </body>
 </html>
