--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
         <title>Computação Grafica</title>
     </head>
     <body>
-        <div style="width:100%; overflow:hidden;">
-            <div style="width:50px;float:left;">
-                <button class="btn-des" type="button" id="linha">&verbar;</button>
-                <button class="btn-des" type="button" id="retan">&#8414;</button>
-                <button class="btn-des" type="button" id="trian">&lrtri;</button>
-                <button class="btn-des" type="button" id="circu">&#8413;</button>
-            </div>
-            <canvas id="canvas" style="margin-left: 60px; border:1px solid #d3d3d3" width="500" height="500"></canvas>
+        <div>
+            <button class="btn-des" type="button" id="linha">&verbar;</button>
+            <button class="btn-des" type="button" id="retan">&#8414;</button>
+            <button class="btn-des" type="button" id="trian">&lrtri;</button>
+            <button class="btn-des" type="button" id="circu">&#8413;</button>
         </div>
+        <canvas id="canvas" style="border:1px solid #d3d3d3" width="500" height="500"></canvas>
         <table id="tabela_obj"></table>
         <script src="./dist/main.js" charset="utf-8"></script>
         <style>
@@ -21,7 +19,6 @@
                 font-size : 20pt;
                 width : 50px;
                 height : 50px;
-                margin-left : 20px;
             }
         </style>
     </body>
